# HotelManagementSystem

./: .gitignore  CMakeLists.txt  CMakePresets.json  list_persons.json  person1.json  person2.json  vcpkg.json
data/: dataBase.json
include/: Guest.h  Hotel.h  Menu.h  Person.h  json_model.h  json_models.h  utils.h  utils_io.h
include/services/: hotelServices.h  utilsHotelsServices.h
proto/: CMakeLists.txt
proto/hotel/: guest.proto  hotel.proto  showRooms.proto
src/: Hotel.cpp  guest.cpp  json_models.cpp  main.cpp  person.cpp  utils.cpp  utils_io.cpp
src/services/: hotelServices.cpp  utilsHotelServices.cpp
